fix:body overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -69,6 +69,10 @@
   }
 }
 
+body{
+  overflow-x: hidden;
+}
+
 .neonText {
   color: #e7b40b;
   text-shadow:
